--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,7 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 
+# Instruction files
+*.pdf
 # Data base
 *.bz2
